<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_about">About</string>
    <string name="app_search_site">SearchSiteFromBaidu</string>
    <string name="app_search_liulishe">GetDomainFromBBS</string>
    <string name="app_switch_night">NightMode</string>
    <string name="app_cancel">Cancel</string>
    <string name="app_chrome">Open with browser</string>
    <string name="app_copied">Copyed %1$s</string>
    <string name="app_copy">Copy</string>
    <string name="app_exit">exit</string>
    <string name="app_exit_confirm">Want to exit?</string>
    <string name="app_list_complete">Nothing more</string>
    <string name="app_list_empty">Empty</string>
    <string name="app_list_loading">Loading…</string>
    <string name="app_magnet">Link</string>
    <string name="app_name">HAcg</string>
    <string name="app_network_retry">Request hacg failed, click black cat to retry, or chagne host in menu.</string>
    <string name="app_ok">OK</string>
    <string name="app_open">Open</string>
    <string name="app_philosophy">Web</string>
    <string name="app_publish">Publish</string>
    <string name="app_save">Save</string>
    <string name="app_search">Search</string>
    <string name="app_search_clear">Clear search history</string>
    <string name="app_settings">Settings</string>
    <string name="app_share">Share</string>
    <string name="app_update">Update</string>
    <string name="app_update_check">Check update</string>
    <string name="app_update_new">Update from %1$s to %2$s</string>
    <string name="app_update_none">Version %1$s is newest.</string>

    <string name="comment_author">Author</string>
    <string name="comment_content">Content</string>
    <string name="comment_email">EMail</string>
    <string name="comment_failed">Submit failed</string>
    <string name="comment_refresh">Refresh</string>
    <string name="comment_review">Review</string>
    <string name="comment_review_to">Review: %1$s</string>
    <string name="comment_submit">Submit</string>
    <string name="comment_succeeded">Submit succeeded</string>
    <string name="comment_title">Comment</string>
    <string name="comment_verify">Some fields are empty.</string>

    <string name="settings_config">Download network config</string>
    <string name="settings_config_fade">Download fade-net config</string>
    <string name="settings_host">HAcg alternate host url</string>
    <string name="settings_host_more">Change</string>
    <string name="settings_host_reset">Reset all</string>
    <string name="settings_host_sample">Like "www.hacg.me".</string>
</resources>
